--- a/apps/mysql/service.yaml
+++ b/apps/mysql/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: mysql
 spec:
+  type: NodePort
+  selector:
+    app: mysql
   ports:
     - protocol: TCP
       port: 3306
       targetPort: 3306
-  selector:
-    app: mysql
-  clusterIP: None
