--- a/apps/influxdb/deployment.yaml
+++ b/apps/influxdb/deployment.yaml
@@ -23,9 +23,12 @@ spec:
         - envFrom:
             - secretRef:
                 name: influxdb-creds
-          image: docker.io/influxdb:1.6.4
+          image: docker.io/influxdb:2.7
           imagePullPolicy: IfNotPresent
           name: influxdb
+          ports:
+            - containerPort: 8086
+              name: influxdb
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
@@ -40,5 +43,5 @@ spec:
       volumes:
         - name: var-lib-influxdb
           persistentVolumeClaim:
-            claimName: influxdb
+            claimName: influxdb-data-pvc
 status: {}
